Sun May 22 02:39:57 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (rm_r): new option :secure to avoid
	  time-to-check-to-time-to-use security problem.  [ruby-dev:26100]

	* lib/fileutils.rb (remove_file, remove_dir): try chmod(700) only
	  on Windows.

	* lib/fileutils.rb: does not depend on find.rb.

	* lib/fileutils.rb: new method chmod_R.

	* lib/fileutils.rb (chown_R): did not work.

Sat May 21 10:23:21 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: tds files were not deleted when DESTDIR
	  included '\' path delimiter. [ruby-dev:26193]

Fri May 20 15:52:18 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  return 2 items if completion_proc returns only 1 item (for libedit).

Fri May 20 01:24:33 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/extconf.rb: check rl_vi_editing_mode() and
	  rl_emacs_editing_mode().

Thu May 19 23:33:09 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/readline.c: supported libedit. fixed: [ruby-core:4858]

	* ext/readline/extconf.rb: added new option --enable-libedit.

	* test/readline/test_readline.rb: added assertions for
	  Readline::HISTORY.

	* lib/irb/input-method.rb: do not use Readline::HISTORY.pop.

Wed May 18 23:42:25 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exc_exception): reverted to call Exception#initialize
	  directly.  fixed: [ruby-dev:26177]

Wed May 18 17:38:51 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* dir.c (glob_helper): check whether path is "" before calling
	  do_opendir.  [ruby-dev:26183]

Wed May 18 13:40:48 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (NtInitialize): fix typo.

Wed May 18 11:07:47 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): get rid of using String.  [ruby-dev:26180]

	* eval.c (ruby_options), win32/win32.c (NtInitialize): move argument
	  intialization back.  [ruby-dev:26180]
