@@ -394,7 +394,6 @@ void ruby_process_options _((int, char**));
 void ruby_load_script _((void));
 void ruby_init_loadpath _((void));
 void ruby_incpush _((const char*));
-int ruby_pragma _((const char*, int));
 /* signal.c */
 VALUE rb_f_kill _((int, VALUE*));
 void rb_gc_mark_trap_list _((void));
